# experimental

./: .gitignore  README.md
pino/rx/: pyproject.toml  run_easyocr.py  run_trocr.py
pino/rx/camera_calcs/: dashboard.py
pino/streamlit_apps/pill_calcs/: pyproject.toml  requirements.txt
