[project]
name = "rx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "matplotlib>=3.10.1",
    "pillow>=11.2.1",
    "plotly>=6.0.1",
    "streamlit>=1.44.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]
